--- a/middleground.html
+++ b/middleground.html
@@ -53,6 +53,13 @@
   
 	
 <p><b>Middleground</b> is a series of nine photography editions by Brian McHale. It is a companion collection to <a href="https://opensea.io/collection/onebraintogether"><font color="blue">Obt.</font></a>, our digital collectible project. To mint, you will need an <a href="https://metamask.io/"><font color="blue">Ethereum wallet</font></a>.</p>
+	
+	<h3>OFFICIAL LINKS</h3>
+	<ul>
+	<li><a href="https://discord.gg/myKe3zhRY2"><font color="blue">Discord Server</font></a></li>	
+	<li><a href="https://opensea.io/collection/middleground-obt"><font color="blue">OpenSea Collection</font></a></li>
+	<li><a href="https://etherscan.io/address/0xa78407cd9fd3e95edf0fca754038b3e7151f3096"><font color="blue">Etherscan Contract</font></a></li>	
+	</ul>	
 		
 
 <h3>HOW TO MINT</h3>
