--- a/middleground.html
+++ b/middleground.html
@@ -67,7 +67,7 @@
 	<li>Click "Connect Wallet"</li>
 	<li>Connect your Ethereum wallet</li>
 	<li>Select the number of tokens you would like to mint</li>
-	<li>Click "Mint Presale"</li>
+	<li>Click "Mint"</li>
 	<li>Pay gas fee</li>
 	<li>Wait for confirmation - this should take 1-2 minutes</li>
 	</ol>
@@ -82,7 +82,7 @@
 
 <p>Approximately half of the collection will be available for <a href="https://opensea.io/collection/onebraintogether"><font color="blue">Obt.</font></a> collectors to claim for free during a limited presale window; one per wallet address. The rest of the collection will be available to the public following this period.</p>
 
-<p><b><u>Important Dates</u></b><br>Presale: November 20th, 2022<br>Public sale: November 22st, 2022</p> 
+<p><b><u>Important Dates</u></b><br>Presale: November 20th, 2022<br>Public sale: November 22nd, 2022</p> 
 
 <p><b><u>Mint Information</u></b><br>Total Supply: 99<br>Presale Supply: 44<br>Price: 0.01 ETH (presale free for <a href="https://opensea.io/collection/onebraintogether"><font color="blue">Obt.</font></a> holders)<br>Secondary royalties: 10%</p>
 
