--- a/middleground.html
+++ b/middleground.html
@@ -68,7 +68,7 @@
 	<li>Connect your Ethereum wallet</li>
 	<li>Select the number of tokens you would like to mint</li>
 	<li>Click "Mint"</li>
-	<li>Pay gas fee</li>
+	<li>Pay 0.01 ETH + gas fee</li>
 	<li>Wait for confirmation - this should take 1-2 minutes</li>
 	</ol>
 
