--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@ p  {
 		<li><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS</font></a></li>
 			
 		</ul>
+		        <hr style="border: 1px solid rgb(2, 2, 2);">
+
+	  <h2>EVENTS</h2>
+        
+        <ul>
+		<li><a href="OBTLA.html"><font face="times" size="4" color="red">OBTLA</font></a></li>	
+			
+		</ul>	
         
 </header>
 </body>
