--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ p  {
 	  <h2>EVENTS</h2>
         
         <ul>
-		<li><a href="OBTLA.html"><font face="times" size="4" color="red">OBTLA</font></a></li>	
+		<li><a href="https://gatekeep.it/5abba34a35"><font face="times" size="4" color="red">OBTLA</font></a></li>	
 			
 		</ul>	
         
