--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ p  {
 	  <h2>EVENTS</h2>
         
         <ul>
-		<li><a href="https://gatekeep.it/acbe5c6dc4"><font face="times" size="4" color="red">April 15, 2023: OBTNYC</font></a></li>	
-		<li><a href="https://gatekeep.it/5abba34a35"><font face="times" size="4" color="red">March 23, 2023: OBTLA</font></a></li>	
+		<li><a href="https://gatekeep.it/acbe5c6dc4"><font face="times" size="4" color="red">OBTNYC</font></a></li>	
+		<li><a href="https://gatekeep.it/5abba34a35"><font face="times" size="4" color="red">OBTLA</font></a></li>	
 			
 		</ul>	
         
