--- a/digitaldeadstock/register.html
+++ b/digitaldeadstock/register.html
@@ -53,13 +53,15 @@
 <body>
 	<div class="container">
 	<h1 style="color:#3400ff";><center>One Brain Together</center></h1>
-  	<h2><center>Thank you for purchasing a Digital Deadstock product!</center></h2>
-	<p><center>Welcome, we deeply appreciate your support.<br>Please submit the product registration form below.<br>Your product's digital counterpart will be airdropped to your wallet.</center></p>
+  	<h2><center>Thank you for supporting Digital Deadstock<br>(✯◡✯)</center></h2>
+	<p><center>Welcome to your product's digital entry point.<br>Please submit the registration form below.<br>You will be notified when new utility is added to your garment.</center></p>
 	<form id="ethereum-form" action="https://formsubmit.co/onebraintogether@gmail.com" method="POST">
-		<label for="name">Name/Pseudonym:</label>
+		<label for="name">Name:</label>
 		<input type="text" id="name" name="name" required>
-		<label for="ethereum-address">Ethereum Address:</label>
+		<label for="ethereum-address">Ethereum Address/ENS:</label>
 		<input type="text" id="ethereum-address" name="ethereum-address" required>
+		<label for="email-address">Email:</label>
+		<input type="text" id="email-address" name="email-address" required>
 		<input type="submit" value="Submit">
 	</form>
 	</div>
