--- a/digitaldeadstock/register.html
+++ b/digitaldeadstock/register.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		body {
-			font-family: Helvetica, sans-serif;
+			font-family: Courier New, monospace;
 			background-color: #ffffff;
 		}
 		form {
