--- a/digitaldeadstock/register.html
+++ b/digitaldeadstock/register.html
@@ -53,12 +53,12 @@
 <body>
 	<div class="container">
 	<h1 style="color:#3400ff";><center>One Brain Together</center></h1>
-  	<h2><center>Thank you for supporting Digital Deadstock<br>(✯◡✯)</center></h2>
-	<p><center>Welcome to your product's digital entry point.<br>Please submit the registration form below.<br>You will be notified when new utility is added to your garment.</center></p>
+  	<h2><center>Thank you for supporting<br>Digital Deadstock!<br>(✯◡✯)</center></h2>
+	<p><center>Welcome to your product's digital entry point<br>Please complete the registration form below<br>You will be notified when new utility is added to your garment</center></p>
 	<form id="ethereum-form" action="https://formsubmit.co/onebraintogether@gmail.com" method="POST">
 		<label for="name">Name:</label>
 		<input type="text" id="name" name="name" required>
-		<label for="ethereum-address">Ethereum Address/ENS:</label>
+		<label for="ethereum-address">ETH Address/ENS:</label>
 		<input type="text" id="ethereum-address" name="ethereum-address" required>
 		<label for="email-address">Email:</label>
 		<input type="text" id="email-address" name="email-address" required>
