--- a/digitaldeadstock/register.html
+++ b/digitaldeadstock/register.html
@@ -58,10 +58,10 @@
 	<form id="ethereum-form" action="https://formsubmit.co/onebraintogether@gmail.com" method="POST">
 		<label for="name">Name:</label>
 		<input type="text" id="name" name="name" required>
-		<label for="ethereum-address">ETH Address/ENS:</label>
-		<input type="text" id="ethereum-address" name="ethereum-address" required>
 		<label for="email-address">Email:</label>
-		<input type="text" id="email-address" name="email-address" required>
+		<input type="text" id="email" name="email" required>
+		<label for="ethereum-address">ETH Address:</label>
+		<input type="text" id="eth" name="eth" required>
 		<input type="submit" value="Submit">
 	</form>
 	</div>
