--- a/digitaldeadstock/register.html
+++ b/digitaldeadstock/register.html
@@ -54,7 +54,7 @@
 	<div class="container">
 	<h1 style="color:#3400ff";><center>One Brain Together</center></h1>
   	<h2><center>Thank you for supporting<br>Digital Deadstock!<br>(✯◡✯)</center></h2>
-	<p><center>Welcome to your product's digital entry point<br>Please complete the registration form below and you <br>will be notified when new utility is added to your garment</center></p>
+	<p><center>Welcome to your product's digital entry point<br>Please complete the registration form below and you will<br>be notified when new utility is added to your garment.</center></p>
 	<form id="ethereum-form" action="https://formsubmit.co/onebraintogether@gmail.com" method="POST">
 		<label for="name">Name:</label>
 		<input type="text" id="name" name="name" required>
