--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -54,7 +54,7 @@
 
 	<h2><font color="#ff3400">Digital Deadstock</font></h2>
 
-	<a href="https://www.depop.com/onebraintogether/" target="_blank"><button style="background-color: red; color: white; padding: 10px;">AVAILABLE NOW - CLICK TO BE A CONSOOMER</button></a><br><br>
+	<a href="https://www.depop.com/onebraintogether/" target="_blank"><button style="background-color: red; color: white; padding: 10px;">AVAILABLE NOW - CLICK TO CONSOOOOM</button></a><br><br>
 	<a href="https://www.onebraintogether.com/digitaldeadstock/register" target="_blank"><button style="background-color: blue; color: white; padding: 10px;">PRODUCT REGISTRATION FORM</button></a>
 
 	<p>Digital Deadstock is a sustainable apparel initiative by One Brain Together, bringing new life to secondhand clothing through blockchain-enabled utility, online community benefits, and exclusive art.</p>
