--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -118,8 +118,8 @@ setInterval(showSlides, 2000); // Change image every 2 seconds
 	</ol>
 
 
-	<img src="https://via.placeholder.com/350x150" alt="placeholder image">
-	<img src="https://via.placeholder.com/350x150" alt="placeholder image">
+	<img src="https://cdn.discordapp.com/attachments/934178224886403102/1107816224773124126/IMG_3035.PNG" alt="placeholder image">
+	<img src="https://cdn.discordapp.com/attachments/934178224886403102/1107816224773124126/IMG_3035.PNG" alt="placeholder image">
 
 
 	<h3>What is Digital Deadstock?</h3>
