--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -119,7 +119,7 @@ setInterval(showSlides, 2000); // Change image every 2 seconds
 
 
 	<img src="https://cdn.discordapp.com/attachments/934178224886403102/1107816224773124126/IMG_3035.PNG" alt="placeholder image">
-	<img src="https://cdn.discordapp.com/attachments/934178224886403102/1107816224773124126/IMG_3035.PNG" alt="placeholder image">
+	<img src="https://cdn.discordapp.com/attachments/934178224886403102/1107816224429195385/Screen_Shot_2023-05-13_at_10.14.07_PM.png" alt="placeholder image">
 
 
 	<h3>What is Digital Deadstock?</h3>
