--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="digitaldeadstockcss.css">
+	<link rel="icon" type="image/x-icon" href="IWW.png">
+
 	<title>One Brain Together - Digital Deadstock</title>
 
 <style>
