--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>One Brain Together</title>
+	<link rel="icon" type="image/x-icon" href="IWW.png">
     <style>
 h1 {
   color: blue;
