--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -47,12 +47,15 @@
 	.image-container {
 	  display: flex;
 	  gap: 10px; /* Add a 10px gap between the images */
+	  align-items: left;
 	}
 
 	.image-container img {
 	  flex: 1; /* Distribute available space evenly */
 	  max-width: 100%; /* Limit the maximum width of the images */
 	  height: auto; /* Adjust height automatically based on aspect ratio */
+	  width: 50%;
+	  margin-right: 10px;
 	}
 </style>
 
