--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -57,6 +57,17 @@
 	  width: 50%;
 	  margin-right: 10px;
 	}
+	
+	.image-container img:first-child {
+  	width: 50%;
+  	height: auto;
+  	margin-right: 10px;
+	}
+
+	.image-container img:last-child {
+ 	 width: 100%;
+  	height: auto;
+	}
 </style>
 
 
