--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -145,8 +145,7 @@ setInterval(showSlides, 2000); // Change image every 2 seconds
 	</ol>
 
 	<div class="image-container">
-		<img src="https://cdn.discordapp.com/attachments/934178224886403102/1107816224773124126/IMG_3035.PNG" alt="placeholder image">
-		<img src="https://cdn.discordapp.com/attachments/934178224886403102/1107816224429195385/Screen_Shot_2023-05-13_at_10.14.07_PM.png" alt="placeholder image">
+		<img src="qrformsitepic.png">
 	</div>
 	
 
