--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -54,19 +54,8 @@
 	  flex: 1; /* Distribute available space evenly */
 	  max-width: 100%; /* Limit the maximum width of the images */
 	  height: auto; /* Adjust height automatically based on aspect ratio */
-	  width: 50%;
+	  width: auto;
 	  margin-right: 10px;
-	}
-	
-	.image-container img:first-child {
-  	width: 50%;
-  	height: auto;
-  	margin-right: 10px;
-	}
-
-	.image-container img:last-child {
- 	 width: 100%;
-  	height: auto;
 	}
 </style>
 
