--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -52,7 +52,6 @@
 
 	.image-container img {
 	  flex: 1; /* Distribute available space evenly */
-	  max-width: 100%; /* Limit the maximum width of the images */
 	  height: auto; /* Adjust height automatically based on aspect ratio */
 	  width: auto;
 	  margin-right: 10px;
@@ -132,9 +131,11 @@ setInterval(showSlides, 2000); // Change image every 2 seconds
 	<li>You will receive an airdrop in your Ethereum wallet that will allow you to mint our digital lookbook zine and all future art drops for a discount.</li>
 	<li><b>Obt. holders</b> -- You will soon be able to swap out your avatar's original shirt or pants for a digital version of your IRL garment in The Echo Chamber (beta), our interactive online world and community event space. More info TBA.</li>
 	</ol>
-
-	<img src="qrformsitepic.png">
 	
+	<div class="image-container">
+		<img src="qrformsitepic.png">
+	</div>
+
 
 	<h3>What is Digital Deadstock?</h3>
 	<p>One Brain Together aims to connect the deepest of the physical and digital worlds. We believe in the necessity of reducing textile waste, while also embracing bleeding-edge technologies to bring new, interactive experiences to clothing that otherwise would've ended up in a landfill. By "digitally upcycling" thrifted clothes, we're able to give a new life and dimension to previously discarded items and help promote sustainable practices in what we wear and create, alleviating the idea that sustainability comes at the cost of innovation.</p>
