--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -141,9 +141,7 @@ Our line grants access to a community of like-minded individuals who share a pas
 		<li><b>The Echo Chamber:</b> We're all about providing a personalized virtual fashion experience that allows you to truly express yourself. Our line lets you swap out your avatar's clothing for the digital version of the clothes you purchased in real life, giving you complete control over your virtual style.</li>
 	</ul>
 
-		<p>Our line is more than just a fashion statement - it's a way to unlock digital utility within our online community spaces and games. Each garment has a unique feature that provides utility, allowing you to get the most out of your purchase and engage in exciting new experiences within our community.</p>
-
-	<p>Join us today and experience the new standard in sustainable fashion.</p>
+	<a href = "https://onebraintogether.com"><p>Join our Discord</p></a>
 
 
 </body>
