--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -59,36 +59,8 @@
 
 	<a href="https://www.onebraintogether.com/distro" target="_blank"><button style="background-color: red; color: white; padding: 10px;">AVAILABLE NOW - CLICK TO CONSOOOOM</button></a><br><br>
 
-	<p>Digital Deadstock is a sustainable apparel initiative by One Brain Together, bringing new life to secondhand clothing through blockchain-enabled utility, online community benefits, and exclusive art.</p>
+	<p>Digital Deadstock is a sustainable apparel initiative by One Brain Together, bringing new life to secondhand clothing through online community benefits, onchain utility, and exclusive art.</p>
 
-	
-	<h3>How to register your Digital Deadstock product</h3>
-	
-		<a href="https://www.onebraintogether.com/digitaldeadstock/register" target="_blank"><button style="background-color: blue; color: white; padding: 10px;">PRODUCT REGISTRATION FORM</button></a>
-
-	<ol>
-	<li>Scan the QR code printed on the inside of your piece and fill out the registration form.</li>
-	<li>You will receive an airdrop in your Ethereum wallet that will allow you to mint our digital lookbook zine and all future art drops for a discount.</li>
-	<li><b>Obt. holders</b> -- You will soon be able to swap out your avatar's original shirt or pants for a digital version of your IRL garment in The Echo Chamber (beta), our interactive online world and community event space. More info TBA.</li>
-	</ol>
-	
-	<img src="qrformsitepic.png">
-
-
-
-	<h3>What is Digital Deadstock?</h3>
-	<p>One Brain Together aims to connect the deepest of the physical and digital worlds. We believe in the necessity of reducing textile waste, while also embracing bleeding-edge technologies to bring new, interactive experiences to clothing that otherwise would've ended up in a landfill. By "digitally upcycling" thrifted clothes, we're able to give a new life and dimension to previously discarded items and help promote sustainable practices in what we wear and create, alleviating the idea that sustainability comes at the cost of innovation.</p>
-	<p>When you purchase a Digital Deadstock product, the garment itself is only the beginning. Scan the QR code on the inside tag area and gain access to an ever-growing offering of immersive and unique online and IRL experiences for our community.</p> 
-	<ul>
-		<li><b>IRL & URL Events:</b> After hosting two successful Digital Deadstock popups in Los Angeles and New York City, we're ready to throw many more events in the near future - all registered wallets get free access to all of our events, both IRL and online, as well as additional perks, such as free screenprints on your personal garments.</li>
-		<li><b>Digital Art Drops:</b> Registered wallets will be automatically placed on a presale list for all future art drops. We work with top emerging artists to offer one-of-a-kind digital art drops, that can be ordered as clothing upon collecting. 
-Our line grants access to a community of like-minded individuals who share a passion for sustainable fashion and digital experiences. As a member of our community, you'll have access to an exclusive online space where you can connect with others and explore new digital spaces together.</li>
-		<li><b>The Echo Chamber:</b> We're all about providing a personalized virtual fashion experience that allows you to truly express yourself. Our line lets you swap out your avatar's clothing for the digital version of the clothes you purchased in real life, giving you complete control over your virtual style.</li>
-	</ul>
-
-	<a href = "https://onebraintogether.com"><p>Join our Discord</p></a>
-	
-	
 <div class="slideshow-container">
   <div class="mySlides fade">
     <img src="https://cdn.discordapp.com/attachments/934178224886403102/1107711381668642956/obtla_1.png" style="width:100%">
@@ -139,6 +111,30 @@ setInterval(showSlides, 2000); // Change image every 2 seconds
 
 </script>
 
+	<h3>What is Digital Deadstock?</h3>
+	<p>One Brain Together aims to connect the deepest of the physical and digital worlds. We believe in the necessity of reducing textile waste, while also embracing bleeding-edge technologies to bring new, interactive experiences to clothing that otherwise would've ended up in a landfill. By "digitally upcycling" thrifted clothes, we're able to give a new life and dimension to previously discarded items and help promote sustainable practices in what we wear and create, alleviating the idea that sustainability comes at the cost of innovation.</p>
+	<p>When you purchase a Digital Deadstock product, the garment itself is only the beginning. Scan the QR code on the inside tag area and gain access to an ever-growing offering of immersive and unique online and IRL experiences for our community.</p> 
+	<ul>
+		<li><b>IRL & URL Events:</b> After hosting two successful Digital Deadstock popups in Los Angeles and New York City, we're ready to throw many more events in the near future - all registered wallets get free access to all of our events, both IRL and online, as well as additional perks, such as free screenprints on your personal garments.</li>
+		<li><b>Digital Art Drops:</b> Registered wallets will be automatically placed on a presale list for all future art drops. We work with top emerging artists to offer one-of-a-kind digital art drops, that can be ordered as clothing upon collecting. 
+Our line grants access to a community of like-minded individuals who share a passion for sustainable fashion and digital experiences. As a member of our community, you'll have access to an exclusive online space where you can connect with others and explore new digital spaces together.</li>
+		<li><b>The Echo Chamber:</b> We're all about providing a personalized virtual fashion experience that allows you to truly express yourself. Our line lets you swap out your avatar's clothing for the digital version of the clothes you purchased in real life, giving you complete control over your virtual style.</li>
+	</ul>
+
+	<a href = "https://onebraintogether.com"><p>Join our Discord</p></a>
+	
+
+	<h3>How to register your Digital Deadstock product</h3>
+	
+		<a href="https://www.onebraintogether.com/digitaldeadstock/register" target="_blank"><button style="background-color: blue; color: white; padding: 10px;">PRODUCT REGISTRATION FORM</button></a>
+
+	<ol>
+	<li>Scan the QR code printed on the inside of your piece and fill out the registration form.</li>
+	<li>You will receive an airdrop in your Ethereum wallet that will allow you to mint our digital lookbook zine and all future art drops for a discount.</li>
+	<li><b>Obt. holders</b> -- You will soon be able to swap out your avatar's original shirt or pants for a digital version of your IRL garment in The Echo Chamber (beta), our interactive online world and community event space. More info TBA.</li>
+	</ol>
+	
+	<img src="qrformsitepic.png">
 
 </body>
 <hr style="border: 1px solid rgb(2, 2, 2);">
