--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ p  {
         <h2>PROJECTS</h2>
         
         <ul>
+		<li><a href="digitaldeadstock.html"><font face="times" size="4" color="red">Digital Deadstock</font></a></li>	
 		<li><a href="middleground.html"><font face="times" size="4" color="red">Middleground</font></a></li>	
         	<li><a href="obt.html"><font face="times" size="4" color="red">Obt.</font></a></li>
 		<li><a href="newneurons.html"><font face="times" size="4" color="red">NEW NEURONS</font></a></li>
