--- a/digitaldeadstock.html
+++ b/digitaldeadstock.html
@@ -130,7 +130,7 @@ setInterval(showSlides, 2000); // Change image every 2 seconds
 		<li><b>The Echo Chamber:</b> TBA</li>
 	</ul>
 
-<a href="https://onebraintogether.com" style="color: blue; text-decoration: none;"><p>Join the OBT Discord today</p></a>
+<a href="https://discord.gg/myKe3zhRY2" style="color: blue; text-decoration: none;"><p>Join the OBT Discord today</p></a>
 	
 
 
